# Pumpernickel

./: .deploy-cache-bust  .env.example  .gitattributes  .gitignore  .railwayignore  README.md  _repro_t16.py  agentkit-migration-chain.yaml  docker-compose.yml  nixpacks.toml  pyproject.toml  tool_schemas.py
app/: config.py  db.py  main.py  staging.py
docs/: SECURITY.md  add-new-bot.md  agent-reliability-cleanup-revised.md  agent-reliability-cleanup-sprints.md  conversation-artifacts.md  discord-pacing.md  discord-presence-pacing-plan.md  fitness-bot-commitments-plan.md  incremental-agent-sending-plan.md  live-voice-agent-meta-checklist.md  live-voice-deployment-runbook.md  longitudinal-state.md  observability.md  ops.md  pregnancy-state.md  recovery-redesign-brief.md  reflection-foundation-handoff.md  reflections_m4_deletion_audit.md  reflections_m4_release_evidence.md  superpom-compass.md  superpom-reflections-full-build.md  superpom-ux-audit-20260615.md
evals/: assertions.py  execution.py  factories.py  results.py  scenario.py  state.py
megaplans/: discord-agenda-authoring-brief.md  discord-agenda-epic-sprint1-identity.md  discord-agenda-epic-sprint2-authoring.md  discord-agenda-epic.chain.yaml  discord-reconnect-catchup-brief.md  inbound-queue-hardening-brief.md  mediated-follow-through-brief.md  mind-mouth-compose-brief.md  partner-nudge-brief.md  per-bot-sharing-brief.md  plan_v2.md  tool-error-recovery-and-agent-correction-brief.md  xen-retrieval-brief.md  xen-v1-decision-and-validation.md  xen-v1-epic-plan.md  xen-v1-epic.chain.yaml  xen-v1-m4-sisypy-brief.md  (+11 more)
(+635 files in other folders)
