[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediator-bot"
version = "0.1.0"
description = "FastAPI foundation for the mediator bot."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "fastapi",
    "uvicorn[standard]",
    "asyncpg",
    "pydantic>=2",
    "pydantic-settings",
    "cryptography",
    "httpx",
    "openai>=1.0",
    "python-multipart",
    "websockets",
    "PyYAML",
    "emoji>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio",
]
retrieval-db = [
    "pgvector",
    "psycopg[binary]",
]
agentic = [
    "sisypy @ git+https://github.com/peteromallet/sisypy.git@650f80307d7f1d14005b954e254e9be3804f8002",
]

[tool.setuptools.packages.find]
include = ["app*", "evals*", "resident_chat_runtime*"]

[tool.setuptools]
py-modules = ["tool_schemas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
